--- a/src/main/resources/templates/th/admin/statAdmin/productSalesVolume.html
+++ b/src/main/resources/templates/th/admin/statAdmin/productSalesVolume.html
@@ -8,63 +8,42 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.2.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-
+<link rel="stylesheet" th:href="@{/css/statAdmin.css}">
 
 <!-- body@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 <body>
-
-<!-- 차트 div -->
-<!-- 차트 1 -->
-<div>
-    <h1> 연도별 매출 순위 </h1>
-    회사명 입력 <input type="text" value="" id="inputSellerName">
+<div class="container">
+    <!-- 차트 div -->
+    <!-- 차트 1 -->
+    <div>
+        <h1> 연도별 매출 순위 </h1>
+        회사명 입력 <input type="text" value="" id="inputSellerName">
+        <form action="/admin/searchCom">
+            회사명?<input name="sellerName" type="text">
+            <input type="submit">
+        </form>
         <button name="sellerBtn" onsubmit="true" onclick="sellerBtn()">제출</button>
-
-        <div id="name" style="width:35%; height:50px">
-            <canvas id="myChart" style="width:35%; height:100%; float:left"></canvas>
+        <!-- 차트 1 -->
+        <div class="row-cols-1" id="name" style="width:35%; height:50px">
+            <canvas class="chart1" id="myChart" style="width:35%; height:100%; float:left"></canvas>
         </div>
         <!-- 차트 2 -->
-        <div id="name2" style="width:35%; height:50px">
-            <canvas id="myChart2" style="width:35%; height:100%; float:left; display: none"></canvas>
+        <div class="row-cols-2" id="name2" style="width:35%; height:50px">
+            <canvas class="chart2" id="myChart2" style="width:35%; height:100%; float:left; display: none"></canvas>
         </div>
         <!-- 차트 3 -->
-        <div name="myShow" style="width:35%; height:50px">
-            <canvas id="myChart3" style="width:35%; height:100%; float:left; display: none"></canvas>
+        <div class="row-cols-3" id="name3" style="width:35%; height:50px">
+            <canvas class="chart3" id="myChart3" style="width:35%; height:100%; float:left; display: none"></canvas>
         </div>
+    </div>
 </div>
-<script type="text/javascript">
-    function sellerBtn() {
-        var inputSellerName = document.getElementById("inputSellerName").value;
-        console.log("inputSellerName : "+inputSellerName);
-        var sellform ={
-            inputSellerName : inputSellerName
-        }
-        $.ajax({
-            //console.log("hi");
-            url: "sellerGraphAjax",
-            type: "POST",
-            data: sellform,
-            success: function (data) {
-                alert("suc");
-            },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
-            error: function () {
-                alert("test err");
-            }
-        });
-    }
 
-</script>
+
 <!-- 차트 div 끝 -->
 <!-- layer 버튼 시작 -->
 <!-- <button name = "myShow2" onclick=showHide2();> layer2 </button><br>  버튼 필요 없으면 삭제 예정-->
 <!-- <button name = "myShow3" onclick=showHide3();> layer3 </button> -->
-
-
-<div id="result"></div>
-<span th:text="${jsonText}"></span>
-</body>
-
 
 <!-- type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
 /*Controller 에서
@@ -138,8 +117,40 @@
         }
     }
 
+
+
+
+
+
 </script>
 -->
+
+
+<script type="text/javascript">
+    function sellerBtn() {
+        var inputSellerName = document.getElementById("inputSellerName").value;
+        console.log("inputSellerName : " + inputSellerName);
+        $.ajax({
+            //console.log("hi");
+            url: "sellerGraphAjax",
+            type: "POST",
+            data: {
+                inputSellerName: inputSellerName
+            },
+            success: function (data) {
+                alert("suc");
+            },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
+            error: function () {
+                alert("test err");
+            }
+        });
+    }
+
+
+</script>
+
+
+
 
 <script th:inline="javascript">
     var globalGraph2Return;
@@ -166,32 +177,32 @@
     var yearlyTotalPrice = new Array();    // 총액
     var yearlySellerNameArr = new Array();    // 판매자
     console.log("len : " + yearlyJsonParse.length + yearlyJsonParse);
-    for(var j = 0; j<yearlyJsonParse.length; j++){
+    for (var j = 0; j < yearlyJsonParse.length; j++) {
         yearlyYearArr[j] = yearlyJsonParse[j].year;
         yerlyQtyArr[j] = yearlyJsonParse[j].orderQty;
         yearlyTotalPrice[j] = yearlyJsonParse[j].totalPrice;
-       // yearlySellerNameArr[j] = yearlyJsonParse[j].sellerName;
+        // yearlySellerNameArr[j] = yearlyJsonParse[j].sellerName;
     }
 
-    console.log("yearlyYearArr :: " + yearlyYearArr + yerlyQtyArr + yearlyTotalPrice + "sellerName :: "+sellN);
+    console.log("yearlyYearArr :: " + yearlyYearArr + yerlyQtyArr + yearlyTotalPrice + "sellerName :: " + sellN);
     //var jsonYear = JSON.parse(yearList);
 
-    var chart1Arr = new Array();
+    //var chart1Arr = new Array();
     var yearArr = new Array();
     var yearArr2 = new Array();
     var productNo = new Array();
 
-    for (var i = 0; i < jsonParse.length; i++) {
+    /*for (var i = 0; i < jsonParse.length; i++) {
         chart1Arr[i] = jsonParse[i].orderQty;
         productNo[i] = jsonParse[i].productNo; // 품목명을 입력 받아서  날짜ㅡㅣ판매량
         yearArr2[i] = jsonParse[i].year;                                        // 날짜를 입력 받아서 품목 ㅡ ㅣ 판매량
         //yearArr[i] = jsonParse[i].productionDay;
-    }
-    for(var i = 0; i<yearList.length; i++){
+    }*/
+    /*for (var i = 0; i < yearList.length; i++) {
         yearArr[i] = yearList[i];
-    }
-    console.log("chart1Arr" + chart1Arr + "yearArr : " + yearArr);
-    console.log("productNo : "+productNo);
+    }*/
+    //console.log("chart1Arr" + chart1Arr + "yearArr : " + yearArr);
+    console.log("productNo : " + productNo);
 
 
     //var productArray2 = new Array(6);
@@ -229,11 +240,6 @@
     };
 
 
-
-
-
-
-
     var monthData; //var monthData = [[${monthJsonText}]];
     var dayData;    //var dayData = [[${dayJsonText}]];
     var monthLabel;
@@ -257,7 +263,7 @@
                     //document.getElementById("myChart2").style.display = 'none';
                 }
                 var activePoints = myNewChart.getElementsAtEvent(evt); // activePoints선언
-                console.log("activePoints: "+activePoints);
+                console.log("activePoints: " + activePoints);
                 if (activePoints[0]) {
                     var chartData = activePoints[0]['_chart'].config.data;
                     var idx = activePoints[0]['_index'];
@@ -268,7 +274,7 @@
                     var yearform = {
                         product: productNo[0],
                         year: yearLabel,
-                        sellerName : sellN
+                        sellerName: sellN
                     }
                     console.log("product : " + productNo[0]);
                     console.log("year : " + yearLabel);
@@ -278,9 +284,10 @@
                         type: "POST",
                         data: yearform,
                         success: function (data) {
-                             // ajax 성공시 chart2() 호출
+                            // ajax 성공시 chart2() 호출
                             globalGraph2Return = data;
                             alert(globalGraph2Return);
+                            reload1();
                             chart2();
                         },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
                         error: function () {
@@ -299,148 +306,162 @@
     );
 
     //2번 차트 ajax@@@@@@@@@@
+    function reload1() {
+        document.getElementById('myChart2').remove();
+        console.log("reload1");
+        var canv1 = document.createElement('canvas');
+        canv1.id = 'myChart2';
+        document.getElementById('name2').appendChild(canv1);
+    }
 
+    function reload2() {
+        $('#myChart3').remove();
+        console.log("reload2");
+        var canv2 = document.createElement('canvas'); //style="float: left;"
+        canv2.id = 'myChart3';
+        document.getElementById('name3').appendChild(canv2);
+    }
 
-        function chart2() {
+    function chart2() {
 
-            console.log("chart2입니다 :: " + globalGraph2Return);
-            //var monthlyAjaxResult = JSON.parse(globalGraph2Return);
-            var monthlyMonthArr = new Array();
-            var monthlyQtyArr = new Array();
-            var monthlyTotalPriceArr = new Array();
-            //console.log("graph : " + monthlyAjaxResult +"len : "+2);
-            for(var i=0; i<globalGraph2Return.length ; i++){
-                monthlyMonthArr[i] = globalGraph2Return[i].month;
-                monthlyQtyArr[i] = globalGraph2Return[i].totalPrice;
-                monthlyTotalPriceArr[i] = globalGraph2Return[i].orderQty;
+        console.log("chart2입니다 :: " + globalGraph2Return);
+        //var monthlyAjaxResult = JSON.parse(globalGraph2Return);
+        var monthlyMonthArr = new Array();
+        var monthlyQtyArr = new Array();
+        var monthlyTotalPriceArr = new Array();
+        //console.log("graph : " + monthlyAjaxResult +"len : "+2);
+        for (var i = 0; i < globalGraph2Return.length; i++) {
+            monthlyMonthArr[i] = globalGraph2Return[i].month;
+            monthlyTotalPriceArr[i] = globalGraph2Return[i].totalPrice;
+            monthlyQtyArr[i] = globalGraph2Return[i].orderQty;
+        }
+        console.log("monthly : " + monthlyMonthArr + monthlyQtyArr + monthlyTotalPriceArr);
+
+        var chart2Data = {
+            labels: monthlyMonthArr, // month 들어갈 자리
+            datasets: [{
+                label: sellN, //
+                data: monthlyTotalPriceArr, // 달당 수량
+                backgroundColor: backC,
+                borderColor: borderC,
+                borderWidth: 1
+            }]
+        };
+
+        var chart2Canvas = document.getElementById("myChart2");
+        var ctx2 = chart2Canvas.getContext('2d');
+        var chart2 = new Chart(ctx2, {
+            type: 'bar',
+            data: chart2Data,
+            options: options
+        });
+        chart2Canvas.onclick = function (evt) {
+            if (document.getElementById("myChart3").style.display == 'none') {
+                document.getElementById("myChart3").style.display = 'block';
+            } else {
+                console.log("이미 보여져있다");
+                //document.getElementById("myChart3").style.display = 'none';
             }
-            console.log("monthly : "+ monthlyMonthArr + monthlyQtyArr+ monthlyTotalPriceArr);
 
-            var chart2Data = {
-                labels: monthlyMonthArr, // month 들어갈 자리
-                datasets: [{
-                    label: sellN, //
-                    data: monthlyTotalPriceArr, // 달당 수량
-                    backgroundColor: backC,
-                    borderColor: borderC,
-                    borderWidth: 1
-                }]
-            };
+            var activePoints = chart2.getElementsAtEvent(evt); // aP선언
+            console.log("activePoints: " + activePoints);
+            if (activePoints[0]) {
+                var chartData = activePoints[0]['_chart'].config.data;
+                console.log("chartData : " + chartData);
+                var idx = activePoints[0]['_index'];
+                console.log("idx : " + idx);
 
-            var chart2Canvas = document.getElementById("myChart2");
-            var ctx2 = chart2Canvas.getContext('2d');
-            var chart2 = new Chart(ctx2, {
-                type: 'bar',
-                data: chart2Data,
-                options: options
-            });
-            chart2Canvas.onclick = function (evt) {
-                if (document.getElementById("myChart3").style.display == 'none') {
-                    document.getElementById("myChart3").style.display = 'block';
-                } else {
-                    console.log("이미 보여져있다");
-                    //document.getElementById("myChart3").style.display = 'none';
+                monthLabel = chartData.labels[idx];
+                console.log("label : " + monthLabel);
+
+                var value = chartData.datasets[0].data[idx];
+                console.log("value : " + value);     //label : month,
+
+                var url = "http://example.com/?label=" + monthLabel + "&value=" + value;
+                console.log(url);
+
+                alert(url);
+
+                var monthform = {
+                    product: productNo[0],
+                    year: yearLabel,
+                    month: monthLabel,
+                    sellerName: sellN
                 }
-
-                var activePoints = chart2.getElementsAtEvent(evt); // aP선언
-                console.log("activePoints: "+activePoints);
-                if (activePoints[0]) {
-                    var chartData = activePoints[0]['_chart'].config.data;
-                    console.log("chartData : "+chartData);
-                    var idx = activePoints[0]['_index'];
-                    console.log("idx : " + idx);
-
-                    monthLabel = chartData.labels[idx];
-                    console.log("label : " + monthLabel);
-
-                    var value = chartData.datasets[0].data[idx];
-                    console.log("value : " + value);     //label : month,
-
-                    var url = "http://example.com/?label=" + monthLabel + "&value=" + value;
-                    console.log(url);
-
-                    alert(url);
-
-                    var monthform = {
-                        product: productNo[0],
-                        year : yearLabel,
-                        month: monthLabel,
-                        sellerName : sellN
+                console.log("product : " + productNo[0]);
+                console.log("month : " + monthLabel);
+                //location.replace(url);
+                $.ajax({
+                    //console.log("hi");
+                    url: "monthGraphAjax",
+                    type: "POST",
+                    async: false,
+                    data: monthform,
+                    success: function (data) {
+                        globalGraph3Return = data;
+                        alert(globalGraph3Return);
+                        reload2();
+                        chart3();
+                    },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
+                    error: function () {
+                        alert("test err");
                     }
-                    console.log("product : " + productNo[0]);
-                    console.log("month : " + monthLabel);
-                    //location.replace(url);
-                    $.ajax({
-                        //console.log("hi");
-                        url: "monthGraphAjax",
-                        type: "POST",
-                        async : false,
-                        data: monthform,
-                        success: function (data) {
-                            globalGraph3Return = data;
-                            alert(globalGraph3Return);
-                            chart3();
-                        },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
-                        error: function () {
-                            alert("test err");
-                        }
-                    });
-                }
-            };
-        }
-
-
-
-        function chart3() {
-            console.log("전역변수차트3변수" + globalGraph3Return);
-
-            var dailyDayArr = new Array();
-            var dailyQtyArr = new Array();
-            var dailyTotalPriceArr = new Array();
-            //console.log("graph : " + monthlyAjaxResult +"len : "+2);
-            for(var i=0; i<globalGraph3Return.length ; i++){
-                dailyDayArr[i] = globalGraph3Return[i].month;
-                dailyQtyArr[i] = globalGraph3Return[i].totalPrice;
-                dailyTotalPriceArr[i] = globalGraph3Return[i].orderQty;
+                });
             }
-            console.log("monthly : "+ dailyDayArr + dailyQtyArr+ dailyTotalPriceArr);
+        };
+    }
 
 
-            var chart3Data = {
-                labels: dailyDayArr, //day 들어갈 자리
-                datasets: [{
-                    label: sellN,   // 이름
-                    data: dailyQtyArr, // 데이터
-                    backgroundColor: backC,
-                    borderColor: borderC,
-                    borderWidth: 1
-                }]
-            };
-            var chart3Canvas = document.getElementById("myChart3");
-            var ctx3 = chart3Canvas.getContext('2d');
-            var chart3 = new Chart(ctx3, {
-                type: 'bar',
-                data: chart3Data,
-                options: options
-            });
-            chart3Canvas.onclick = function (evt) {
-                var activePoints = chart3.getElementsAtEvent(evt); // aP선언
-                console.log("activePoints: "+activePoints);
-                if (activePoints[0]) {
-                    var chartData = activePoints[0]['_chart'].config.data;
-                    var idx = activePoints[0]['_index'];
+    function chart3() {
+        console.log("전역변수차트3변수" + globalGraph3Return);
 
-                    var label = chartData.labels[idx]; // label = day
-                    var value = chartData.datasets[0].data[idx];
-
-                    var url = "http://example.com/?label=" + label + "&value=" + value;
-                    console.log(url);
-                    alert(url);
-
-                    //location.replace(url);
-                }
-            };
+        var dailyDayArr = new Array();
+        var dailyQtyArr = new Array();
+        var dailyTotalPriceArr = new Array();
+        //console.log("graph : " + monthlyAjaxResult +"len : "+2);
+        for (var i = 0; i < globalGraph3Return.length; i++) {
+            dailyDayArr[i] = globalGraph3Return[i].day;
+            dailyTotalPriceArr[i] = globalGraph3Return[i].totalPrice;
+            dailyQtyArr[i] = globalGraph3Return[i].orderQty;
         }
+        console.log("monthly : " + dailyDayArr + dailyQtyArr + dailyTotalPriceArr);
+
+
+        var chart3Data = {
+            labels: dailyDayArr, //day 들어갈 자리
+            datasets: [{
+                label: sellN,   // 이름
+                data: dailyTotalPriceArr, // 데이터
+                backgroundColor: backC,
+                borderColor: borderC,
+                borderWidth: 1
+            }]
+        };
+        var chart3Canvas = document.getElementById("myChart3");
+        var ctx3 = chart3Canvas.getContext('2d');
+        var chart3 = new Chart(ctx3, {
+            type: 'bar',
+            data: chart3Data,
+            options: options
+        });
+        chart3Canvas.onclick = function (evt) {
+            var activePoints = chart3.getElementsAtEvent(evt); // aP선언
+            console.log("activePoints: " + activePoints);
+            if (activePoints[0]) {
+                var chartData = activePoints[0]['_chart'].config.data;
+                var idx = activePoints[0]['_index'];
+
+                var label = chartData.labels[idx]; // label = day
+                var value = chartData.datasets[0].data[idx];
+
+                var url = "http://example.com/?label=" + label + "&value=" + value;
+                console.log(url);
+                alert(url);
+
+                //location.replace(url);
+            }
+        };
+    }
 
 
     /*
@@ -455,4 +476,5 @@ alert("Clicked: " + label + " - " + value);
     */
 </script>
 
+</body>
 </html>
