--- a/src/main/resources/templates/th/photoBoard/photoBoardDetail.html
+++ b/src/main/resources/templates/th/photoBoard/photoBoardDetail.html
@@ -5,15 +5,117 @@
 <head>
     <meta charset="UTF-8">
     <title>사진 상세보기</title>
-
-
+    <th:block layout:fragment="css">
+        <link rel="stylesheet" th:href="@{/css/photoBoard.css}">
+    </th:block>
     <script type="text/javascript" th:src="@{/js/photoBoard.js}"></script>
 
 </head>
 <body>
 <div layout:fragment="content">
-
-    <div class="form-group">
+    <div class="card-detail">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-8 card-detail__content">
+                    <header class="card-detail-header"></header>
+                    <article class="card-detail-card">
+                        <div class="card-detail-card-image-wrap card-detail-card__image">
+                            <div class="card-detail-card-image" style="padding-bottom: 100%;">
+                                <img class="card-detail-card-image__image" th:if="${photodetail.photoImg1 != null}" th:src="'/uploadImg'+${photodetail?.photoImg1}" style="width: 500px; height: 500px;"/>
+                                <img class="card-detail-card-image__image" th:if="${photodetail.photoImg2 != null}" th:src="'/uploadImg'+${photodetail?.photoImg2}" style="width: 500px; height: 500px;"/>
+                                <img class="card-detail-card-image__image" th:if="${photodetail.photoImg3 != null}" th:src="'/uploadImg'+${photodetail?.photoImg3}" style="width: 500px; height: 500px;"/>
+                                <img class="card-detail-card-image__image" th:if="${photodetail.photoImg4 != null}" th:src="'/uploadImg'+${photodetail?.photoImg4}" style="width: 500px; height: 500px;"/>
+                                <img class="card-detail-card-image__image" th:if="${photodetail.photoImg5 != null}" th:src="'/uploadImg'+${photodetail?.photoImg5}" style="width: 500px; height: 500px;"/>
+                            </div>
+                        </div>
+                        <p class="card-detail-card__description" th:text="${photodetail.photoContent}"></p>
+                    </article>
+                    <div class="card-detail-comment-section">
+                        <section class="comment-feed">
+                            <h1 class="comment-feed-header">
+                                댓글&nbsp;
+                                <span class="comment-feed__header__count zero" th:text="${commentCount}"></span>
+                            </h1>
+                            <form class="comment-feed__form">
+                                <div class="comment-feed__form__user">
+                                    <!-- th:if로 로그인 사용자의 프로필 이미지가 없으면 아래 사진으로 아니면 그 밑에 사진으로.-->
+                                    <img th:src="'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'"
+                                         srcset="'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg' 1.5x,
+                                                '/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg' 2x,
+                                                '/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg' 3x"/>
+                                    <!-- 로그인한 사용자 프로필 이미지 -->
+                                </div>
+                                <div class="comment-feed__form__input">
+                                    <div class="comment-feed__form__content">
+                                        <div class="comment-content-input">
+                                            <div class="comment-content-input__text comment-feed__form__content__text"
+                                                 data-ph="댓글을 작성해주세요" contenteditable="true">::before
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="comment-feed__form__actions">
+                                        <button class="comment-feed__form__submit" aria-label="등록" type="submit" disabled>등록</button>
+                                    </div>
+                                </div>
+                            </form>
+                            <ul class="comment-feed__list"></ul>
+                        </section>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 card-detail__sidebar">
+                    <div class="card-detail-sidebar-wrap">
+                        <div data-sticky-enabled="false" data-sticky-always="false" data-direction="top" data-offset="131" class="sticky-container card-detail-sidebar"
+                             style="position: sticky; top: 131px;">
+                            <div class="sticky-child card-detail-sidebar__inner" style="position: relative; box-sizing: border-box; height: 838px;">
+                                <div class="card-detail-sidebar__action-list">
+                                    <button class="button button--color-gray-4 button--size-50 button--shape-8 card-detail-sidebar__action-item" type="button">
+                                        <svg class="icon icon--stroke" aria-label="좋아요" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet">
+                                            <path d="M23.22 7.95c.4 4.94-2.92 9.71-10.92 13.85a.47.47 0 0 1-.42 0C3.88 17.66.56 12.9.96 7.93 1.54 2.48 8.28.3 12.1 4.7c3.8-4.4 10.55-2.22 11.13 3.25z"></path>
+                                        </svg>
+                                        <!-- 좋아요 개수 -->
+                                        <span class="count">35</span>
+                                    </button>
+                                    <button class="button button--color-gray-4 button--size-50 button--shape-8 card-detail-sidebar__action-item" type="button">
+                                        <svg class="icon icon--stroke" aria-label="스크랩" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet">
+                                            <path d="M11.53 18.54l-8.06 4.31A1 1 0 0 1 2 21.97V3.5A1.5 1.5 0 0 1 3.5 2h17A1.5 1.5 0 0 1 22 3.5v18.47a1 1 0 0 1-1.47.88l-8.06-4.31a1 1 0 0 0-.94 0z"></path>
+                                        </svg>
+                                        <!-- 스크랩 개수-->
+                                        <span class="count">25</span>
+                                    </button>
+                                </div>
+                                <div class="card-detail-sidebar__content">
+                                    <div class="card-detail-writer">
+                                        <div class="card-detail-writer__user">
+                                            <a class="card-detail-writer__link" href=""><!--프로필창으로 이동 -->
+                                                <img th:src="'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg'"
+                                                     srcset="'/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg' 1.5x,
+                                                                '/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg' 2x,
+                                                                '/uploadImg/profileImg/2020062511233324595ed8-2c5c-4fb0-9167-30b9fe6751fc.jpg' 3x">
+                                                <span class="card-detail-writer__name" th:text="${photodetail.memberId}"></span>
+                                            </a>
+                                        </div>
+                                        <button class="button button--color-gray-4 button--size-30 button--shape-4 card-detail-writer__follow" type="button">쪽지보내기</button>
+                                    </div>
+                                    <div class="card-detail-pc-related-card-list">
+                                        <ul class="card-detail-pc-related-card-list__list" th:each="photo : ${userphoto}">
+                                            <li class="card-detail-pc-related-card-list__item">
+                                                <a class="card-detail-pc-related-card-list__item__link" th:href="@{/photodetail/{photoBoardNo}(photoBoardNo=${photo.photoBoardNo})}">
+                                                    <img class="card-detail-pc-related-card-list__item__image" alt th:src="'/uploadImg'+${photo?.photoImg1}">
+                                                </a>
+                                            </li>
+                                            </th:each>
+                                        </ul>
+                                           <a class="card-detail-pc-related-card-list__more" href="">더보기</a><!-- allphoto로 이동? 아니면 없애든지-->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--<div class="form-group">
         <input type="button" th:if="${likestat == 0}" id="like" name="like" th:value="${photodetail.likeCount}"/>
         <input type="button" th:if="${likestat == 1}" id="cancellike" name="cancellike" value="좋아요취소"/>
         <input type="button" th:if="${scrapstat == 0}" id="scrap" name="scrap" value="스크랩"/>
@@ -82,7 +184,7 @@
         </th:each>
         </tr>
         </table>
-    </div>
+    </div>-->
 </div>
 </body>
 </html>
