--- a/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
+++ b/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
@@ -24,7 +24,7 @@
         <h1>
             <a href="">연간</a>
         </h1>날짜 : <input id="dateCalendar" type='date'/> - <input id="dateCalendar2" type='date'/><button onclick="getDate()">클릭</button>
-        <div id="hoho">
+        <div id="hoho" style="width:50%; height:400px;">
         <canvas id="myChart" style="width:100%; height:100%; float:none"></canvas>
         </div>
         <div id="field">
