--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -1,13 +1,50 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script>
+    $( function() {
+        var json = [
+            "ActionScript",
+            "AppleScript",
+            "Asp",
+            "BASIC",
+            "C",
+            "C++",
+            "Clojure",
+            "COBOL",
+            "ColdFusion",
+            "Erlang",
+            "Fortran",
+            "Groovy",
+            "Haskell",
+            "Java",
+            "JavaScript",
+            "Lisp",
+            "Perl",
+            "PHP",
+            "Python",
+            "Ruby",
+            "Scala",
+            "Scheme"
+        ];
+        $("#index").autocomplete({
+            source: json
+        });
+    });
+</script>
+
 <div th:fragment="headerFragment">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 xs-12 md-auto">
                 <nav class="navbar navbar-icon-top navbar-expand-lg navbar-light" style="background-color: white;">
-                    <a class="navbar-brand" th:href="@{/}"><img th:src="@{/icon/thehouse.jpg}" class="rounded-circle" width=50px
-                                                                height=50px /> <b> TheHouse</b></a>
+                    <a class="navbar-brand" th:href="@{/}"><img th:src="@{/icon/thehouse.jpg}" class="rounded-circle"
+                                                                width=50px
+                                                                height=50px/> <b> TheHouse</b></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -18,7 +55,8 @@
                         <ul class="navbar-nav ml-auto">
 
                             <li class="nav-item dropdown">
-                                <a class="nav-link" th:href="@{/communityMain}" id="navbarDropdown" role="button" aria-haspopup="true"
+                                <a class="nav-link" th:href="@{/communityMain}" id="navbarDropdown" role="button"
+                                   aria-haspopup="true"
                                    aria-expanded="false">
 
                                     커뮤니티
@@ -29,7 +67,8 @@
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link" th:href="@{/}" id="navbarDropdown" role="button" aria-haspopup="true"
+                                <a class="nav-link" th:href="@{/}" id="navbarDropdown" role="button"
+                                   aria-haspopup="true"
                                    aria-expanded="false">
 
                                     스토어
@@ -83,8 +122,9 @@
                             <div class="nav-wrapper">
                                 <form class="form-inline ml-0 ml-md-3" action="/productions/searchlist" method="get">
                                     <div class="input-group input-group-sm">
-                                        <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search" style="width:100px;"
-                                               name="index" id="${index}" th:value="${index?:''}" onfocus="this.value=''">
+                                        <input class="form-control form-control-navbar" type="search"
+                                               placeholder="Search" aria-label="Search" style="width:100px;"
+                                               name="index" id="index" th:value="${index?:''}" onfocus="this.value=''">
 
                                         <div class="input-group-append">
                                             <button class="btn btn-navbar" type="submit">
@@ -108,22 +148,34 @@
                             </div>
 
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/customLogin}">
-                                <button sec:authorize="isAnonymous()" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">로그인</button>
+                                <button sec:authorize="isAnonymous()" class="btn btn-outline-info my-2 my-sm-0 btn-sm"
+                                        type="submit">로그인
+                                </button>
                             </form>
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/customLogout}">
-                                <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">로그아웃</button>
+                                <button sec:authorize="isAuthenticated()"
+                                        class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">로그아웃
+                                </button>
                             </form>
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/signup}">
-                                <button sec:authorize="isAnonymous()" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">회원가입</button>
+                                <button sec:authorize="isAnonymous()" class="btn btn-outline-info my-2 my-sm-0 btn-sm"
+                                        type="submit">회원가입
+                                </button>
                             </form>
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/member/myBoard}">
-                                <button sec:authorize="hasAnyRole('ROLE_MEMBER', 'ROLE_USER')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">마이페이지</button>
+                                <button sec:authorize="hasAnyRole('ROLE_MEMBER', 'ROLE_USER')"
+                                        class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">마이페이지
+                                </button>
                             </form>
                             <form class="form-inline my-2 my-lg-0" th:action="@{/admin/statAdmin}">
-                                <button sec:authorize="hasRole('ROLE_ADMIN')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm">관리자홈</button>
+                                <button sec:authorize="hasRole('ROLE_ADMIN')"
+                                        class="btn btn-outline-danger my-2 my-sm-0 btn-sm">관리자홈
+                                </button>
                             </form>
                             <form class="form-inline my-2 my-lg-0" th:action="@{/seller/sellerInfo}">
-                                <button sec:authorize="hasRole('ROLE_SELLER')" class="btn btn-outline-danger my-2 my-sm-0 btn-sm">업체홈</button>
+                                <button sec:authorize="hasRole('ROLE_SELLER')"
+                                        class="btn btn-outline-danger my-2 my-sm-0 btn-sm">업체홈
+                                </button>
                             </form>
                         </ul>
 
@@ -133,5 +185,6 @@
         </div>
     </div>
 </div>
+
 
 </html>
