--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -11,11 +11,9 @@
     <link th:href="@{/css/productPage.css}" rel="stylesheet"/>
     <!--    <link rel="stylesheet" th:href="@{https://www.w3schools.com/w3css/4/w3.css}">-->
 
-    <script th:src="@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css"/>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
 
 </head>
 <body>
@@ -98,7 +96,7 @@
                 <form action="" method="post" th:object="${basketVO}">
                     <div class="input-group">
                         <select th:field="*{productColor}" class="custom-select col-md-7" th:id="inputGroupSelect01">
-                            <option selected disabled value="">색상</option>
+                            <option selected value="">색상을 선택해주세요</option>
                             <option id="colorSelect" th:each="color : ${product.colorCodeVOList}"
                                     th:value="${color}"
                                     th:utext="${color}"/>
