--- a/src/main/resources/templates/th/member/mypage/shopping/myOrderList.html
+++ b/src/main/resources/templates/th/member/mypage/shopping/myOrderList.html
@@ -11,6 +11,15 @@
     <link th:href="@{/css/productPage.css}" rel="stylesheet"/>
 
     <script th:src="@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js}"></script>
+
+    <script>
+        $( document ).ready( function() {
+            $( '.check-all' ).click( function() {
+                $( '.check' ).prop( 'checked', this.checked );
+            } );
+        } );
+    </script>
+
 </head>
 <body>
 <div layout:fragment="content">
@@ -46,57 +55,14 @@
                     <td th:text="무료"></td>
                     <td th:text="${orderList.orderType}"></td>
                     <td>
-                        <button class="btn btn-primary" data-toggle="collapse"
-                                th:attr="data-target='#confirm' + ${iter.count}">구매확정
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" aria-expanded="false" aria-controls="collapseExample"
+                                th:attr="data-target='#conf' + ${iter.count}">구매확정
                         </button>
-                        <div th:id="'confirm' + ${iter.count}" class="collapse">
-                            <button type="button" class="btn btn-primary" data-toggle="modal"
-                                    th:attr="data-target='#return' + ${iter.count}">
-                                반품
-                            </button>
-
-                            <!-- The Modal -->
-                            <div class="modal fade" th:id="'return' + ${iter.count}">
-                                <div class="modal-dialog modal-dialog-centered">
-                                    <form th:action="returnReason" th:method="post">
-                                        <input th:type="hidden" th:name="orderNo"
-                                               th:value="${orderList.orderNo}"></input>
-                                        <div class="modal-content">
-                                            <!-- Modal Header -->
-                                            <div class="modal-header">
-                                                <h4 class="modal-title">밤품하시겠습니까?</h4>
-                                                <button type="button" class="close" data-dismiss="modal">&times;
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <div class="form-group">
-                                                    <label for="confirmReason-text"
-                                                           class="col-form-label">반품사유</label>
-                                                    <textarea class="form-control"
-                                                              id="confirmReason-text"
-                                                              th:name="orderConfirmReason"
-                                                              placeholder="내용을 입력해주세요"></textarea>
-                                                </div>
-                                            </div>
-                                            <!-- Modal footer -->
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                                                    취소
-                                                </button>
-                                                <button type="submit" class="btn btn-primary">저장</button>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div>
+                        <div th:id="'conf' + ${iter.count}" class="collapse">
                             <button type="button" class="btn btn-primary" data-toggle="modal"
                                     th:attr="data-target='#review' + ${iter.count}">
                                 리뷰작성
                             </button>
-
                             <!-- The Modal -->
                             <div class="modal fade" th:id="'review' + ${iter.count}">
                                 <div class="modal-dialog modal-dialog-centered">
@@ -113,7 +79,6 @@
                                                 <div class="form-group">
                                                     <label class="col-form-label">별점평가</label>
                                                 </div>
-
                                                 <div class="form-group">
                                                     <label for="reviewContent-text"
                                                            class="col-form-label">리뷰작성</label>
@@ -142,6 +107,49 @@
                                                 </div>
                                             </div>
 
+                                            <!-- Modal footer -->
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                                    취소
+                                                </button>
+                                                <button type="submit" class="btn btn-primary">저장</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div>
+                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                                    th:attr="data-target='#return' + ${iter.count}">
+                                반품
+                            </button>
+
+                            <!-- The Modal -->
+                            <div class="modal fade" th:id="'return' + ${iter.count}">
+                                <div class="modal-dialog modal-dialog-centered">
+
+                                    <form th:action="returnReason" th:method="post">
+                                        <input th:type="hidden" th:name="orderNo"
+                                               th:value="${orderList.orderNo}"></input>
+                                        <div class="modal-content">
+                                            <!-- Modal Header -->
+                                            <div class="modal-header">
+                                                <h4 class="modal-title">반품하시겠습니까?</h4>
+                                                <button type="button" class="close" data-dismiss="modal">&times;
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div class="form-group">
+                                                    <label for="confirmReason-text"
+                                                           class="col-form-label">반품사유</label>
+                                                    <textarea class="form-control"
+                                                              id="confirmReason-text"
+                                                              th:name="orderConfirmReason"
+                                                              placeholder="내용을 입력해주세요"></textarea>
+                                                </div>
+                                            </div>
                                             <!-- Modal footer -->
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">
@@ -207,9 +215,9 @@
                     <tr>
                         <th scope="col">
                             <div class="form-check">
-                                <input class="form-check-input position-static" type="checkbox" onclick="checkAll()"
-                                       id="parent"
-                                       value="option1" aria-label="..." checked>
+                                <input class="check-all position-static" type="checkbox"
+                                       id="parent" name="All"
+                                       value="option1" aria-label="...">
                             </div>
                         </th>
                         <th scope="col">№</th>
@@ -221,7 +229,8 @@
                     <tr th:each="review, iter:${reviewList}">
                         <td>
                             <div class="form-check">
-                                <input class="form-check-input position-static" th:value="${review.orderNo}" th:name="orderNo" type="checkbox" id="child_checkbox" aria-label="..." checked>
+                                <input class="check position-static" th:value="${review.orderNo}"
+                                       th:name="orderNo" type="checkbox" aria-label="...">
                             </div>
                         </td>
                         <td th:text="${iter.count}"></td>
@@ -240,7 +249,6 @@
         </div>
     </div>
 </div>
-
 
 
 </body>
